# wicker

./: .buildinfo  .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  VERSION  copy_testing.py  dev-requirements.txt  genindex.html  getstarted.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  schema.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  helloAction.yml  publish.yml
_sources/: getstarted.rst.txt  index.rst.txt
cplusplus/: Makefile  configure
docs/source/: conf.py  getstarted.rst  schema.rst
doctrees/: environment.pickle  index.doctree
html/: genindex.html  searchindex.js
notebooks/: Wicker Hello World.ipynb
tests/: .wickerconfig.test.json  test_avro_schema.py  test_column_files.py  test_datasets.py  test_filelock.py  test_numpy_codec.py  test_s3_storage.py  test_shuffle.py  test_spark.py  test_storage.py  test_wandb.py
tests/core/: test_persistence.py
tests/core/multi_cloud/gcloud/: mocked_classes.py  test_gcs.py
wicker/core/: column_files.py  config.py  datasets.py  definitions.py  errors.py  filelock.py  parsing.py  persistance.py  shuffle.py  storage.py  utils.py  writer.py
wicker/core/multi_cloud/gcloud/: gcs.py
wicker/l5ml_datastore/: cpp_extensions.pyi
wicker/l5ml_datastore/cpp/: arrow_util.cpp  arrow_util.h  cpp_extensions.cpp  hello_world.cpp  hello_world.h  sampling.cpp  sampling.h  temporal_windowing.cpp  temporal_windowing.h  util.h
wicker/l5ml_datastore/v2/: helloworld_index.py  index_ops.py
wicker/plugins/: dynamodb.py  flyte.py  spark.py  wandb.py
wicker/schema/: __init__.py  codecs.py  dataloading.py  dataparsing.py  schema.py  serialization.py  validation.py
wicker/testing/: codecs.py  storage.py
wicker/writers/: dynamo_writer.py
