[metadata]
name = wicker
version = file: VERSION
author = Jay Chia
author_email = jaychia94@gmail.com
description = An open source framework for Machine Learning dataset storage and serving
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/woven-planet/Wicker
project_urls =
    Bug Tracker = https://github.com/woven-planet/Wicker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    =.
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pyarrow
    boto3
    tqdm

[options.extras_require]
flyte = flytekit
dynamodb = pynamodb
spark = pyspark
wandb = wandb

[options.packages.find]
where = .
exclude =
    tests

ext_modules = [
    Pybind11Extension(
        "wicker.l5ml_datastore.cpp_extensions",
        [
            "wicker/l5ml_datastore/cpp/arrow_util.cpp",
            "wicker/l5ml_datastore/cpp/cpp_extensions.cpp",
            "wicker/l5ml_datastore/cpp/sampling.cpp",
            "wicker/l5ml_datastore/cpp/temporal_windowing.cpp",
        ],
        cxx_std=17,
        include_dirs=[pyarrow_include_dir],
        extra_compile_args=[
            "-fvisibility=hidden",
            "-Wall",
            "-Wextra",
            "-Werror",
            "-Wno-unused-parameter",
            "-Wnon-virtual-dtor",
            "-I/home/ubuntu/wicker/jadoocli-dev/lib/python3.8/site-packages/pybind11/include"
        ],
        library_dirs=[pyarrow_location],
        libraries=[":libarrow.so.500", ":libarrow_python.so.500"],
        extra_link_args=["-Wl,-rpath,$ORIGIN", "-Wl,-rpath,$ORIGIN/pyarrow"],
    ),
]