[metadata]
name = wicker
version = file: VERSION
author = wicker-maintainers
author_email = wicker-maintainers@woven-planet.global
description = An open source framework for Machine Learning dataset storage and serving
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/woven-planet/Wicker
project_urls =
    Bug Tracker = https://github.com/woven-planet/Wicker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    =.
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pyarrow
    boto3

[options.extras_require]
flyte = flytekit
dynamodb = pynamodb
spark = pyspark
wandb = wandb

[options.packages.find]
where = .
exclude =
    tests
